--- a/.github/workflows/armv8-config.yml
+++ b/.github/workflows/armv8-config.yml
@@ -15,12 +15,12 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: armv8/feeds.conf.default
-  CONFIG_FILE: armv8/.config
+  CONFIG_FILE: armv8/armv8.config
   DIY_P1_SH: armv8/diy-part1.sh
   DIY_P2_SH: armv8/diy-part2.sh
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: false
-  CONFIG: Aarch64
+  CONFIG: armv8
   TZ: Asia/Shanghai
   
 jobs:
