--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -40,7 +40,7 @@ env:
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
   FILE_NAME: x86_64
-  PRODUCT_NAME: x86_64_515
+  PRODUCT_NAME: x86_64
   
 jobs:
   Checka:
@@ -316,7 +316,7 @@ jobs:
     - name: Telegram notification
       run: |
         MSG="
-        ♨️${{ env.PRODUCT_NAME }}编译完成
+        ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
         开始时间：${{ env.DATE }}
         完成时间：${{ env.DATE1 }}
         编译耗时：${{ env.time }}
@@ -561,7 +561,7 @@ jobs:
     - name: Telegram notification
       run: |
         MSG="
-        ♨️${{ env.PRODUCT_NAME }}编译完成
+        ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
         开始时间：${{ env.DATE }}
         完成时间：${{ env.DATE1 }}
         编译耗时：${{ env.time }}
