--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -1,4 +1,10 @@
-name: Delete Artifacts Update Checker
+
+#========================================================================================================================
+# Update synchronization checker
+# By：Jejz
+#========================================================================================================================
+
+name: Update synchronization checker
 
 on:
   repository_dispatch:
