Update Multiple Source Check.yml

--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -1,7 +1,7 @@
-
-#========================================================================================================================
+#===============================================
 # Multiple Source Check
-#========================================================================================================================
+# By：Jejz
+#===============================================
 
 name: Multiple Source Check
  
