--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -1,5 +1,6 @@
 #===============================================
-# ARMv8 OpenWrt
+# Description: ARMv8 OpenWrt
+# Lisence: MIT
 # By：Jejz
 #===============================================
 
