--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -1,5 +1,6 @@
 #===============================================
-# ARMv8-ROOTFS
+# Description: ARMv8-ROOTFS
+# Lisence: MIT
 # By：Jejz
 #===============================================
 
