--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -1,5 +1,6 @@
 #===============================================
-# ARMv8 OpenWrt
+# Description: ARMv8
+# Lisence: MIT
 # By：Jejz
 #===============================================
 
