--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -1,5 +1,6 @@
 #===============================================
-# X86_64
+# Description: X86_64
+# Lisence: MIT
 # By：Jejz
 #===============================================
 
