Update Multiple Source Check.yml

--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -1,5 +1,6 @@
 #===============================================
-# Multiple Source Check
+# Description: Multiple Source Check
+# Lisence: MIT
 # By：Jejz
 #===============================================
 
