Update Update synchronization checker.yml

--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -1,6 +1,7 @@
 
 #===============================================
-# Update synchronization checker
+# Description: Update synchronization checker
+# Lisence: MIT
 # By：Jejz
 #===============================================
 
