--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -309,7 +309,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.PACKAGED_STATUS == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }}_ 」固件
+        name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }} 」固件
         allowUpdates: true
         tag: ${{ env.TAG }}_${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GH_TOKEN }}
