--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -118,6 +118,7 @@ jobs:
         WHOAMI: Jejz
         KERNEL_REPO_URL: https://github.com/Jejz168/OpenWrt/tree/main/backup/kernel
         KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
+        DISTRIB_REVISION: ${OPENWRT_VER} By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M")
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz
     
