--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -196,6 +196,7 @@ jobs:
       with:
         name: ${{ env.DATE }} 🚫「 ${{ env.FILE_NAME }} 」
         allowUpdates: true
+        removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
