--- a/x86/x86.config
+++ b/x86/x86.config
@@ -509,7 +509,7 @@ CONFIG_FEED_packages=y
 CONFIG_FEED_luci=y
 CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
-CONFIG_FEED_helloworld=y
+CONFIG_FEED_Jejz=y
 
 #
 # Base system
